--- a/public/project/app/directives/arcMenu/menu.html
+++ b/public/project/app/directives/arcMenu/menu.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
         <md-button class="md-icon-button" hide-gt-sm ng-click="toggleSidenav()"><md-icon md-menu-origin>menu</md-icon></md-button>
         <h1 class="md-headline">
-            <span>{{title}}</span>
+            <span>{{currentPageTitle}}</span>
         </h1>
         <span flex></span>
     </div>
