User client service complete, as well as login page.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -46,9 +46,10 @@
 <!-- FontAwesome -->
 <script src="https://use.fontawesome.com/c8d811335b.js"></script>
 <!-- Services -->
-
+<script src="app/services/User.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/home/ArcusCtrl.js"></script>
+<script src="app/controllers/user/LoginCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
