More work on the User stack

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -50,6 +50,7 @@
 <!-- Controllers -->
 <script src="app/controllers/home/ArcusCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
+<script src="app/controllers/user/ProfileCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
