Register page complete

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -51,6 +51,7 @@
 <script src="app/controllers/home/ArcusCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
 <script src="app/controllers/user/ProfileCtrl.js"></script>
+<script src="app/controllers/user/RegisterCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
