Bot service complete

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -47,6 +47,7 @@
 <script src="https://use.fontawesome.com/c8d811335b.js"></script>
 <!-- Services -->
 <script src="app/services/User.js"></script>
+<script src="app/services/Bot.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/home/ArcusCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
