--- a/public/project/index.html
+++ b/public/project/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/arc-style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-
+    <!-- Angular Trix -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700,500' rel='stylesheet' type='text/css'>
 </head>
@@ -43,6 +44,9 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="app/app.js"></script>
 <script src="app/appConfig.js"></script>
+<!-- Angular Trix -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js"></script>
+<script src="app/libraries/angular-trix.min.js"></script>
 <!-- FontAwesome -->
 <script src="https://use.fontawesome.com/c8d811335b.js"></script>
 <!-- Services -->
@@ -53,6 +57,7 @@
 <script src="app/controllers/user/LoginCtrl.js"></script>
 <script src="app/controllers/user/ProfileCtrl.js"></script>
 <script src="app/controllers/user/RegisterCtrl.js"></script>
+<script src="app/controllers/bot/EditCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
