--- a/public/project/app/directives/arcBotCard/botCard.html
+++ b/public/project/app/directives/arcBotCard/botCard.html
@@ -1,15 +1,19 @@
 <md-card>
     <md-card-header>
         <md-card-avatar>
-            <img class="md-user-avatar" src="https://cdn.discordapp.com/avatars/{{bot.discord.id}}/{{bot.discord.avatar}}.jpg"/>
+            <img class="md-user-avatar" src="https://cdn.discordapp.com/app-icons/{{bot.discord.id}}/{{bot.discord.avatar}}.jpg"/>
         </md-card-avatar>
         <md-card-header-text>
             <span class="md-title">{{bot.name}}</span>
             <span class="md-subhead">{{bot.subtitle}}</span>
         </md-card-header-text>
-        <md-button class="md-raised md-primary">Add to Server</md-button>
+        <md-button class="md-raised md-accent" style="margin-top:0">Add to Server</md-button>
     </md-card-header>
     <md-card-content>
-        <p>{{bot.description}}</p>
+        <p ng-bind-html="bot.description"></p>
     </md-card-content>
+    <md-card-actions layout="row" layout-align="end center" ng-if="elevated">
+        <md-button ng-href="#/bot/edit/{{bot._id}}">Edit</md-button>
+        <md-button ng-click="deleteBot()">Delete</md-button>
+    </md-card-actions>
 </md-card>
