--- a/public/project/index.html
+++ b/public/project/index.html
@@ -60,6 +60,7 @@
 <script src="app/controllers/user/ProfileCtrl.js"></script>
 <script src="app/controllers/user/RegisterCtrl.js"></script>
 <script src="app/controllers/bot/EditCtrl.js"></script>
+<script src="app/controllers/bot/BotViewCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
