--- a/public/project/index.html
+++ b/public/project/index.html
@@ -23,9 +23,9 @@
     <div layout="column" flex>
         <arc-menu title="'Home'"></arc-menu>
         <md-content layout="column" style="height:100%">
-            <div ng-view flex="noshrink"></div>
-            <div flex></div>
-            <arc-footing></arc-footing>
+            <div ng-view style="min-height:100%"></div>
+            <!--<div flex></div>-->
+            <!--<arc-footing></arc-footing>-->
         </md-content>
     </div>
 </div>
