--- a/public/project/index.html
+++ b/public/project/index.html
@@ -58,6 +58,7 @@
 <script src="app/controllers/home/ArcusCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
 <script src="app/controllers/user/ProfileCtrl.js"></script>
+<script src="app/controllers/user/ProfileViewCtrl.js"></script>
 <script src="app/controllers/user/RegisterCtrl.js"></script>
 <script src="app/controllers/bot/EditCtrl.js"></script>
 <script src="app/controllers/bot/BotViewCtrl.js"></script>
