--- a/public/project/index.html
+++ b/public/project/index.html
@@ -62,6 +62,7 @@
 <script src="app/controllers/user/RegisterCtrl.js"></script>
 <script src="app/controllers/bot/EditCtrl.js"></script>
 <script src="app/controllers/bot/BotViewCtrl.js"></script>
+<script src="app/controllers/bot/BotListCtrl.js"></script>
 <!-- Directives -->
 <script src="app/directives/arcMenu/arcMenu.js"></script>
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
