--- a/public/project/index.html
+++ b/public/project/index.html
@@ -54,6 +54,7 @@
 <!-- Services -->
 <script src="app/services/User.js"></script>
 <script src="app/services/Bot.js"></script>
+<script src="app/services/CommentBlock.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/home/ArcusCtrl.js"></script>
 <script src="app/controllers/user/LoginCtrl.js"></script>
@@ -68,6 +69,7 @@
 <script src="app/directives/arcSidenav/arcSidenav.js"></script>
 <script src="app/directives/arcFooting/arcFooting.js"></script>
 <script src="app/directives/arcBotCard/arcBotCard.js"></script>
+<script src="app/directives/arcComment/arcComment.js"></script>
 
 
 </body>
