--- a/public/project/app/directives/arcBotCard/botCard.html
+++ b/public/project/app/directives/arcBotCard/botCard.html
@@ -8,13 +8,16 @@
             <span class="md-title">{{bot.name}}</span>
             <span class="md-subhead">{{bot.subtitle}}</span>
         </md-card-header-text>
-        <md-button class="md-raised md-accent" style="margin-top:0">Add to Server</md-button>
+        <md-button class="md-raised md-accent" style="margin-top:0"
+                   ng-href="https://discordapp.com/oauth2/authorize?&client_id={{bot.discord.id}}&scope=bot&permissions={{bot.discord.permissions}}">
+            Add to Server
+        </md-button>
     </md-card-header>
     <md-card-content>
         <p ng-bind-html="bot.description"></p>
     </md-card-content>
     <md-card-actions layout="row" layout-align="end center">
-        <span class="md-caption">Brought to you by the esteemed
+        <span class="md-caption">By
             <a ng-href="#/profile/{{owner._id}}">{{owner.discord.username || owner.username}}</a>
         </span>
         <span flex></span>
